--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.15.10",
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.97.5",
     "@react-three/fiber": "^8.15.16",
