--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
