--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.22.0",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "react-vertical-timeline-component": "^3.6.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
