--- a/package.json
+++ b/package.json
@@ -13,20 +13,24 @@
     "@emailjs/browser": "^4.1.0",
     "@mui/material": "^5.15.10",
     "@react-spring/three": "^9.7.3",
-    "@react-three/drei": "^9.97.5",
-    "@react-three/fiber": "^8.15.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@react-three/drei": "^9.75.0",
+    "@react-three/fiber": "^8.13.3",
+    "@react-three/rapier": "^1.4.0",
+    "@types/three": "^0.152.1",
+    "leva": "^0.9.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.153.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
@@ -34,6 +38,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.0"
+    "vite": "^4.5.3"
   }
 }
