--- a/package.json
+++ b/package.json
@@ -15,19 +15,22 @@
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.75.0",
     "@react-three/fiber": "^8.13.3",
+    "@react-three/postprocessing": "^2.16.2",
     "@react-three/rapier": "^1.4.0",
     "@types/three": "^0.152.1",
     "leva": "^0.9.35",
+    "postprocessing": "^6.36.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.153.0",
+    "three": "^0.157.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@react-three/eslint-plugin": "^0.1.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^3.1.0",
