--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/postprocessing": "^2.16.2",
     "@react-three/rapier": "^1.4.0",
     "@types/three": "^0.152.1",
+    "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "postprocessing": "^6.36.0",
     "react": "^18.3.1",
