--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/three": "^0.152.1",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
+    "howler": "^2.2.4",
     "leva": "^0.9.35",
     "postprocessing": "^6.36.0",
     "react": "^18.3.1",
