--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postprocessing": "^6.36.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.22.0",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.13.8",
